// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Search Matches snapshot when boolean prop "isOpen" is set to: "false" 1`] = `
<styled.div>
  <styled.input
    innerRef={[Function]}
    onChange={[Function]}
    placeholder="jest-auto-snapshots String Fixture"
    type="text"
    value=""
  />
</styled.div>
`;

exports[`jest-auto-snapshots > Search Matches snapshot when passed all props 1`] = `
<styled.div>
  <styled.input
    innerRef={[Function]}
    onChange={[Function]}
    placeholder="jest-auto-snapshots String Fixture"
    type="text"
    value=""
  />
</styled.div>
`;

exports[`jest-auto-snapshots > Search Matches snapshot when passed only required props 1`] = `
<styled.div>
  <styled.input
    innerRef={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</styled.div>
`;
